# Modular_Utilities

./: .gitignore  FINAL_USER_READINESS_REPORT.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
GPT-Export-Parser/: .gitignore  README.md  demo_ml_trainer.py  extract_messages.py
GPT-Export-Parser/ml_trainer/: ARCHITECTURE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  cli.py  data_loader.py  embeddings.py  prompt_builder.py  requirements.txt  retrieval.py  thread_detector.py  trainer.py  training_tracker.py  vector_store.py
advanced_chunking/: README.md  __init__.py  __main__.py
advanced_chunking/application/: chunking_service.py  input_handler.py  output_formatter.py  structure_detector.py
advanced_chunking/domain/: models.py
advanced_chunking/infrastructure/: file_readers.py  ocr_processor.py  text_processors.py  tokenizers.py
code_crawler/: ARCHITECTURE_RULES.md  CODE_CRAWLER_PHASE1_CHECKLIST.md  EXPLAIN_CARD_REVIEW_CHECKLIST.md  README.md  __init__.py  __main__.py  analyzer.py  config.py  conversion_registry.py  html_to_markdown.py  ignore.gitignore  include.gitignore  main.py
code_crawler/application/: assets.py  bundles.py  delta.py  diagrams.py  explain_cards.py  knowledge_graph.py  metrics.py  quality_gates.py  run_service.py  scanner.py  summary.py
code_crawler/converters/: __init__.py  html_md.py
code_crawler/domain/: assets.py  configuration.py  diagrams.py  explain_cards.py  knowledge_graph.py  manifest.py
code_crawler/persistence/: __init__.py  db.py
code_crawler/shared/: logging.py
dependency_analyzer/: generate_project.py
github-dlr/: CONTRIBUTING.md  LICENSE  pyproject.toml
github-dlr/.github/workflows/: release.yml  tests.yml
knowledge_graph/: README.md  __init__.py  __main__.py
knowledge_graph/application/: __init__.py  graph_service.py  ingestion_service.py  pruning_service.py  query_service.py
knowledge_graph/domain/: __init__.py  models.py
knowledge_graph/infrastructure/: __init__.py  extractors.py  similarity.py  storage.py
knowledge_graph/presentation/: __init__.py
math_converter/: README.md  __init__.py
math_converter/application/: __init__.py  codegen_orchestrator.py  converter.py  expression_pipeline.py  file_processor.py  function_generator.py  library_assembler.py  pdf_extractor.py  symbol_registry.py
math_converter/domain/: __init__.py  codegen_types.py  syntax_types.py
math_converter/infrastructure/: __init__.py
math_converter/presentation/: __init__.py
modular_os/: index.html  package-lock.json  package.json
providers/: README.md  __init__.py
providers/anthropic/: client.py  get_anthropic_models.py
providers/base/: capabilities.py  constants.py  errors.py  factory.py  interfaces.py  logging.py  models.py  streaming.py
providers/config/: __init__.py
providers/deepseek/: client.py  get_deepseek_models.py
providers/di/: container.py
providers/gemini/: client.py  get_gemini_models.py
providers/ollama/: client.py  get_ollama_models.py
providers/openai/: client.py  get_openai_models.py
providers/openrouter/: client.py  get_openrouter_models.py
quickstart/: README.md  code_crawler_quickstart.md  dependency_analyzer_quickstart.md  github_dlr_quickstart.md  knowledge_graph_quickstart.md  providers_quickstart.md  python_utilities_generator_quickstart.md
scripts/: add_headers.py  analyze_dependencies.py  build_dependency_map.py  dependency_scan.py
tests/: conftest.py  test_configuration.py
(+63 files in other folders)
