[project]
name = "github-dlr"
version = "0.1.2"
description = "Download individual files and folders from Github"
authors = [{ name = "Rocktim Saikia", email = "rocktimthedev@gmail.com" }]
requires-python = ">=3.8"
readme = "README.md"
keywords = [
    "download",
    "github",
    "directory",
    "gitdown",
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "argparse>=1.4.0,<2",
    "alive-progress>=3.1.5,<4",
    "emoji>=2.12.1,<3",
    "aiohttp>=3.10.5,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "pytest-aiohttp>=1.0.5,<2",
]

[project.urls]
Homepage = "https://github.com/rocktimsaikia/github-dlr"

[project.scripts]
github-dlr = "github_dlr.console:cli"
gh-dlr = "github_dlr.console:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

